[package]
name = "builder"
version = "0.1.0"
authors = ["Ruannilton <ruannilton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "2.33.3", features = ["yaml"] }
serde_json = "*"
dirs = "3.0.1"
which = "4.0.2"
chrono = { version = "0.4.19", features = ["serde"] }
regex = "1.4.3"
lazy_static = "1.4.0"
semver = {version = "0.11.0",feature = ["serde"]}
fs_extra = "1.2.0"